libs/jsruntime/src/llvmir/bridge.hh

struct BasicBlock;
struct BooleanIr;
struct NumberIr;
struct ClosureIr;
struct CoroutineIr;
struct PromiseIr;
struct ValueIr;
struct ArgvIr;
struct StatusIr;
struct CaptureIr;
// value
BooleanIr* compiler_peer_create_has_value(Compiler* self, ValueIr* value);
BooleanIr* compiler_peer_create_is_loosely_equal(Compiler* self, ValueIr* lhs, ValueIr* rhs);
BooleanIr* compiler_peer_create_is_strictly_equal(Compiler* self, ValueIr* lhs, ValueIr* rhs);
BooleanIr* compiler_peer_create_is_same_boolean_value(Compiler* self,
    ValueIr* value,
    BooleanIr* boolean);
BooleanIr* compiler_peer_create_is_same_number_value(Compiler* self,
    ValueIr* value,
    NumberIr* number);
BooleanIr* compiler_peer_create_is_same_closure_value(Compiler* self,
    ValueIr* value,
    ClosureIr* closure);
BooleanIr* compiler_peer_create_is_same_promise_value(Compiler* self,
    ValueIr* value,
    PromiseIr* promise);
ValueIr* compiler_peer_create_undefined_to_any(Compiler* self);
ValueIr* compiler_peer_create_null_to_any(Compiler* self);
ValueIr* compiler_peer_create_boolean_to_any(Compiler* self, BooleanIr* boolean);
ValueIr* compiler_peer_create_number_to_any(Compiler* self, NumberIr* number);
ValueIr* compiler_peer_create_closure_to_any(Compiler* self, ClosureIr* closure);
ValueIr* compiler_peer_create_value_phi(Compiler* self,
    ValueIr* then_value,
    BasicBlock* then_block,
    ValueIr* else_value,
    BasicBlock* else_block);
ValueIr* compiler_peer_create_local_value(Compiler* self, uint16_t index);
void compiler_peer_create_store_none_to_value(Compiler* self, ValueIr* dest);
void compiler_peer_create_store_undefined_to_value(Compiler* self, ValueIr* dest);
void compiler_peer_create_store_null_to_value(Compiler* self, ValueIr* dest);
void compiler_peer_create_store_boolean_to_value(Compiler* self, BooleanIr* value, ValueIr* dest);
void compiler_peer_create_store_number_to_value(Compiler* self, NumberIr* value, ValueIr* dest);
void compiler_peer_create_store_closure_to_value(Compiler* self, ClosureIr* value, ValueIr* dest);
void compiler_peer_create_store_promise_to_value(Compiler* self, PromiseIr* value, ValueIr* dest);
void compiler_peer_create_store_value_to_value(Compiler* self, ValueIr* value, ValueIr* dest);
ClosureIr* compiler_peer_create_load_closure_from_value(Compiler* self, ValueIr* value);
PromiseIr* compiler_peer_create_load_promise_from_value(Compiler* self, ValueIr* value);
// argv
ArgvIr* compiler_peer_get_argv_nullptr(Compiler* self);
ArgvIr* compiler_peer_create_argv(Compiler* self, uint16_t argc);
ValueIr* compiler_peer_create_get_arg_in_argv(Compiler* self, ArgvIr* argv, uint16_t index);
ValueIr* compiler_peer_create_get_argument_value_ptr(Compiler* self, uint16_t index);
// retv
//
// The `retv` variable holds either a returned or thrown value.
ValueIr* compiler_peer_create_retv(Compiler* self);
void compiler_peer_create_store_undefined_to_retv(Compiler* self);
void compiler_peer_create_store_null_to_retv(Compiler* self);
void compiler_peer_create_store_boolean_to_retv(Compiler* self, BooleanIr* value);
void compiler_peer_create_store_number_to_retv(Compiler* self, NumberIr* value);
void compiler_peer_create_store_closure_to_retv(Compiler* self, ClosureIr* value);
void compiler_peer_create_store_promise_to_retv(Compiler* self, PromiseIr* value);
void compiler_peer_create_store_value_to_retv(Compiler* self, ValueIr* value);
ValueIr* compiler_peer_get_exception(Compiler* self);
// status
//
// TODO: Currently, each lambda has its own status variable.  However, it might be possible to use
// a single global variable shared by all lambdas.  Because the execution model of JavaScript is a
// single threaded model.
void compiler_peer_create_alloc_status(Compiler* self);
void compiler_peer_create_store_normal_status(Compiler* self);
void compiler_peer_create_store_exception_status(Compiler* self);
BooleanIr* compiler_peer_create_is_exception_status(Compiler* self, StatusIr* status);
// flow selector
void compiler_peer_create_alloc_flow_selector(Compiler* self);
void compiler_peer_create_set_flow_selector_normal(Compiler* self);
void compiler_peer_create_set_flow_selector_return(Compiler* self);
void compiler_peer_create_set_flow_selector_throw(Compiler* self);
void compiler_peer_create_set_flow_selector_break(Compiler* self, uint32_t depth);
void compiler_peer_create_set_flow_selector_continue(Compiler* self, uint32_t depth);
BooleanIr* compiler_peer_create_is_flow_selector_normal(Compiler* self);
BooleanIr* compiler_peer_create_is_flow_selector_normal_or_continue(Compiler* self,
    uint32_t depth);
BooleanIr* compiler_peer_create_is_flow_selector_break_or_continue(Compiler* self, uint32_t depth);
BooleanIr* compiler_peer_create_is_flow_selector_break(Compiler* self, uint32_t depth);
// capture
CaptureIr* compiler_peer_create_capture(Compiler* self, ValueIr* value);
void compiler_peer_create_escape_value(Compiler* self, CaptureIr* capture, ValueIr* value);
ValueIr* compiler_peer_create_get_capture_value_ptr(Compiler* self, uint16_t index);
CaptureIr* compiler_peer_create_load_capture(Compiler* self, uint16_t index);
// coroutine
CoroutineIr* compiler_peer_create_coroutine(Compiler* self,
    ClosureIr* closure,
    uint16_t num_locals);
void compiler_peer_create_suspend(Compiler* self);
// print
void compiler_peer_create_print_value(Compiler* self, ValueIr* value, const char* msg);
// unreachable
void compiler_peer_create_unreachable(Compiler* self, const char* msg);