libs/jsruntime/src/llvmir/compiler/bridge.rs


    fn compiler_peer_create_value_is_nullptr(peer: CompilerPeer, value: ValueIrPtr)
        -> BooleanIrPtr;
    fn compiler_peer_create_has_value(peer: CompilerPeer, value: ValueIrPtr) -> BooleanIrPtr;
    fn compiler_peer_create_is_loosely_equal(
        peer: CompilerPeer,
        lhs: ValueIrPtr,
        rhs: ValueIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_strictly_equal(
        peer: CompilerPeer,
        lhs: ValueIrPtr,
        rhs: ValueIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_boolean_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        boolean: BooleanIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_number_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        number: NumberIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_closure_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        closure: ClosureIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_promise_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        promise: PromiseIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_same_object_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        object: ObjectIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_undefined_to_any(peer: CompilerPeer) -> ValueIrPtr;
    fn compiler_peer_create_null_to_any(peer: CompilerPeer) -> ValueIrPtr;
    fn compiler_peer_create_boolean_to_any(peer: CompilerPeer, boolean: BooleanIrPtr)
        -> ValueIrPtr;
    fn compiler_peer_create_number_to_any(peer: CompilerPeer, number: NumberIrPtr) -> ValueIrPtr;
    fn compiler_peer_create_string_to_any(peer: CompilerPeer, string: Char16SeqIrPtr)
        -> ValueIrPtr;
    fn compiler_peer_create_closure_to_any(peer: CompilerPeer, closure: ClosureIrPtr)
        -> ValueIrPtr;
    fn compiler_peer_create_object_to_any(peer: CompilerPeer, object: ObjectIrPtr) -> ValueIrPtr;
    fn compiler_peer_create_value_phi(
        peer: CompilerPeer,
        then_value: ValueIrPtr,
        then_block: BasicBlockPtr,
        else_value: ValueIrPtr,
        else_block: BasicBlockPtr,
    ) -> ValueIrPtr;
    fn compiler_peer_create_local_value(peer: CompilerPeer, index: u16) -> ValueIrPtr;
    fn compiler_peer_create_store_none_to_value(peer: CompilerPeer, dest: ValueIrPtr);
    fn compiler_peer_create_store_undefined_to_value(peer: CompilerPeer, dest: ValueIrPtr);
    fn compiler_peer_create_store_null_to_value(peer: CompilerPeer, dest: ValueIrPtr);
    fn compiler_peer_create_store_boolean_to_value(
        peer: CompilerPeer,
        value: BooleanIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_number_to_value(
        peer: CompilerPeer,
        value: NumberIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_string_to_value(
        peer: CompilerPeer,
        value: Char16SeqIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_closure_to_value(
        peer: CompilerPeer,
        value: ClosureIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_promise_to_value(
        peer: CompilerPeer,
        value: PromiseIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_object_to_value(
        peer: CompilerPeer,
        value: ObjectIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_store_value_to_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
        dest: ValueIrPtr,
    );
    fn compiler_peer_create_load_boolean_from_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_load_closure_from_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
    ) -> ClosureIrPtr;
    fn compiler_peer_create_load_promise_from_value(
        peer: CompilerPeer,
        value: ValueIrPtr,
    ) -> PromiseIrPtr;
    fn compiler_peer_create_typeof(peer: CompilerPeer, value: ValueIrPtr) -> Char16SeqIrPtr;

    // argv

    fn compiler_peer_get_argv_nullptr(peer: CompilerPeer) -> ArgvIrPtr;
    fn compiler_peer_create_argv(peer: CompilerPeer, argc: u16) -> ArgvIrPtr;
    fn compiler_peer_create_get_arg_in_argv(
        peer: CompilerPeer,
        argv: ArgvIrPtr,
        index: u16,
    ) -> ValueIrPtr;
    fn compiler_peer_create_get_argument_value_ptr(peer: CompilerPeer, index: u16) -> ValueIrPtr;

    // retv
    //
    // The `retv` variable holds either a returned or thrown value.

    fn compiler_peer_create_retv(peer: CompilerPeer) -> ValueIrPtr;
    fn compiler_peer_create_store_undefined_to_retv(peer: CompilerPeer);
    fn compiler_peer_create_store_null_to_retv(peer: CompilerPeer);
    fn compiler_peer_create_store_boolean_to_retv(peer: CompilerPeer, value: BooleanIrPtr);
    fn compiler_peer_create_store_number_to_retv(peer: CompilerPeer, value: NumberIrPtr);
    fn compiler_peer_create_store_closure_to_retv(peer: CompilerPeer, value: ClosureIrPtr);
    fn compiler_peer_create_store_promise_to_retv(peer: CompilerPeer, value: PromiseIrPtr);
    fn compiler_peer_create_store_object_to_retv(peer: CompilerPeer, value: ObjectIrPtr);
    fn compiler_peer_create_store_value_to_retv(peer: CompilerPeer, value: ValueIrPtr);
    fn compiler_peer_get_exception(peer: CompilerPeer) -> ValueIrPtr;

    // status
    //
    // TODO: Currently, each lambda has its own status variable.  However, it might be possible to
    // use a single global variable shared by all lambdas.  Because the execution model of
    // JavaScript is a single threaded model.

    fn compiler_peer_create_alloc_status(peer: CompilerPeer);
    fn compiler_peer_create_store_normal_status(peer: CompilerPeer);
    fn compiler_peer_create_store_exception_status(peer: CompilerPeer);
    fn compiler_peer_create_is_exception_status(
        peer: CompilerPeer,
        status: StatusIrPtr,
    ) -> BooleanIrPtr;

    // flow selector

    fn compiler_peer_create_alloc_flow_selector(peer: CompilerPeer);
    fn compiler_peer_create_set_flow_selector_normal(peer: CompilerPeer);
    fn compiler_peer_create_set_flow_selector_return(peer: CompilerPeer);
    fn compiler_peer_create_set_flow_selector_throw(peer: CompilerPeer);
    fn compiler_peer_create_set_flow_selector_break(peer: CompilerPeer, depth: u32);
    fn compiler_peer_create_set_flow_selector_continue(peer: CompilerPeer, depth: u32);
    fn compiler_peer_create_is_flow_selector_normal(peer: CompilerPeer) -> BooleanIrPtr;
    fn compiler_peer_create_is_flow_selector_normal_or_continue(
        peer: CompilerPeer,
        depth: u32,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_flow_selector_break_or_continue(
        peer: CompilerPeer,
        depth: u32,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_is_flow_selector_break(peer: CompilerPeer, depth: u32) -> BooleanIrPtr;

    // capture

    fn compiler_peer_create_capture(peer: CompilerPeer, value: ValueIrPtr) -> CaptureIrPtr;
    fn compiler_peer_create_escape_value(
        peer: CompilerPeer,
        capture: CaptureIrPtr,
        value: ValueIrPtr,
    );
    fn compiler_peer_create_get_capture_value_ptr(peer: CompilerPeer, index: u16) -> ValueIrPtr;
    fn compiler_peer_create_load_capture(peer: CompilerPeer, index: u16) -> CaptureIrPtr;

    // coroutine

    fn compiler_peer_create_coroutine(
        peer: CompilerPeer,
        closure: ClosureIrPtr,
        num_locals: u16,
        scratch_buffer_len: u16,
    ) -> CoroutineIrPtr;
    fn compiler_peer_create_switch_for_coroutine(
        peer: CompilerPeer,
        block: BasicBlockPtr,
        num_states: u32,
    ) -> SwitchIrPtr;
    fn compiler_peer_create_add_state_for_coroutine(
        peer: CompilerPeer,
        switch_ir: SwitchIrPtr,
        state: u32,
        block: BasicBlockPtr,
    );
    fn compiler_peer_create_suspend(peer: CompilerPeer);
    fn compiler_peer_create_set_coroutine_state(peer: CompilerPeer, state: u32);
    fn compiler_peer_create_set_captures_for_coroutine(peer: CompilerPeer);
    fn compiler_peer_create_get_local_ptr_from_coroutine(
        peer: CompilerPeer,
        index: u16,
    ) -> ValueIrPtr;
    fn compiler_peer_create_write_boolean_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: BooleanIrPtr,
    );
    fn compiler_peer_create_read_boolean_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> BooleanIrPtr;
    fn compiler_peer_create_write_number_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: NumberIrPtr,
    );
    fn compiler_peer_create_read_number_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> NumberIrPtr;
    fn compiler_peer_create_write_string_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: Char16SeqIrPtr,
    );
    fn compiler_peer_create_read_string_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> Char16SeqIrPtr;
    fn compiler_peer_create_write_closure_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: ClosureIrPtr,
    );
    fn compiler_peer_create_read_closure_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> ClosureIrPtr;
    fn compiler_peer_create_write_object_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: ObjectIrPtr,
    );
    fn compiler_peer_create_read_object_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> ObjectIrPtr;
    fn compiler_peer_create_write_promise_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: PromiseIrPtr,
    );
    fn compiler_peer_create_read_promise_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> PromiseIrPtr;
    fn compiler_peer_create_write_value_to_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
        value: ValueIrPtr,
    );
    fn compiler_peer_create_read_value_from_scratch_buffer(
        peer: CompilerPeer,
        offset: u32,
    ) -> ValueIrPtr;

    // scope cleanup checker

    fn compiler_peer_enable_scope_cleanup_checker(peer: CompilerPeer, is_coroutine: bool);
    fn compiler_peer_set_scope_id_for_checker(peer: CompilerPeer, scope_id: u16);
    fn compiler_peer_assert_scope_id(peer: CompilerPeer, expected: u16);

    // print

    fn compiler_peer_create_print_boolean(
        peer: CompilerPeer,
        value: BooleanIrPtr,
        msg: *const c_char,
    );
    fn compiler_peer_create_print_string(
        peer: CompilerPeer,
        value: Char16SeqIrPtr,
        msg: *const c_char,
    );
    fn compiler_peer_create_print_value(peer: CompilerPeer, value: ValueIrPtr, msg: *const c_char);
    fn compiler_peer_create_print_message(peer: CompilerPeer, msg: *const c_char);

    // debugger

    fn compiler_peer_create_debugger(peer: CompilerPeer);

    // assertions

    fn compiler_peer_create_assert(peer: CompilerPeer, assert: BooleanIrPtr, msg: *const c_char);
    fn compiler_peer_create_unreachable(peer: CompilerPeer, msg: *const c_char);

    // helpers

    fn compiler_peer_get_basic_block_name_or_as_operand(
        block: BasicBlockPtr,
        buf: *mut c_char,
        len: usize,
    ) -> usize;
    fn compiler_peer_get_value_name_or_as_operand(
        value: ValueIrPtr,
        buf: *mut c_char,
        len: usize,
    ) -> usize;
}
